atualizando links do rodape

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="">Romulo Alcantara Lopes</a> para o <a href="">Cursoemvideo</a></p>
+        <p>Site criado por <a href="https://github.com/romuloalopes" target="_blank">Romulo Alcantara Lopes</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Cursoemvideo</a></p>
     </footer>
     
 </body>
